- add copyright removal issue template - add new reviews and autoplay - update markdown styling - update theme switcher design

--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -25,45 +25,72 @@ We offer a wide range of courses, from "How to Train Your Chicken to Play Chess"
 
 If you're tired of the traditional university application process, don't worry. At Wild Chicken University, we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for chickens. So come join us, and let's cluck our way to academic success!
 
+---
+
 ### Mascot
 
 We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
 <Button ><a href="https://mascot.wcu.edu.pl" target="_blank">Mascot</a></Button>
 
-Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
+Note: your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
+
+---
 
 ### Copyright & Fair Use
 
-Please refer to [disclaimer](/pages/disclaimer)
+Please refer to the [disclaimer](/pages/disclaimer) page.
 
-<Separator className="my-4" />
+### Privacy
+
+Please refer to the [privacy](/pages/privacy) page.
+
+
+---
 
 ### Enough BS, WTF is wcu?
 
-Wild Chicken University (also known as a diploma mill or degree mill) is an organization that awards academic degrees and diplomas with substandard or no academic study and without recognition by official educational accrediting bodies. The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit. These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity. While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn: 
+Wild Chicken University (also known as a diploma mill or degree mill when translated into Chinese "野雞大學" or "野鸡大学") 
+is an organization that awards academic degrees and diplomas with substandard or no academic study and without recognition
+by official educational accrediting bodies. 
+
+The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit. 
+These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation 
+by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity. 
+
+While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn: 
 
 - A "degree mill" issues "real" diplomas from non regionally accredited "universities", which may be legal in some states but are generally illegitimate universities. 
 - A "diploma mill" issues counterfeit diplomas which bear the names of legitimate universities. 
 
 Partially copied from [Wild Chicken University on Facebook (or should we call it Meta?)](https://www.facebook.com/Wild-Chicken-University-170013173058220/about)
 
+---
 
 ### Donation
 
-We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways :)
+We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways, XMR: 
 
-82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap
+`82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap`
+
+點此獲取我們的支付寶二維碼: 
+
+<Button ><a href="https://www.bilibili.com/video/BV1GJ411x7h7/" target="_blank">這一定是二維碼</a></Button>
+
+---
 
 ### 寫在最後
 
 我很意外你有看到這裏 :) 
 
-原始版本的 Wild Chicken University「官網」是修改自 Northwestern University 的錄取結果頁面，當年被拒之後覺得很好玩就做了這個網站。
+[原始版本](https://web.archive.org/web/20220102100912/https://wcu.edu.pl/)的 Wild Chicken University「官網」是修改自 Northwestern University 的錄取結果頁面，
+當年被拒之後覺得很好玩就做了這個網站。
 
 官網的內容經過數次填充和修改成了現在的模樣。雖然並不認爲會有人真的仔細去閱讀，依舊在字裏行間埋藏了許多有趣的內容，也許有和我一樣無聊的人會真的去看。
 
 野雞大學只是一個做工粗糙的玩笑，但它達成了我製作它的初衷。我很開心大家可以通過 WCU 收穫快樂，少一些焦慮，也希望能夠讓暫時沒有 offer 的朋友們 feel better。
+
+衷心祝願所有在申請/找工的朋友們一切順利，也許明年的今天現在無法克服的困難都已經被完美的解決
 
 Best Wishes
 
