--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -1,7 +1,7 @@
 import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert"
 import { AlertCircleIcon } from "lucide-react"
 
-# Disclaimer (and other stuff)
+## Disclaimer (and other stuff)
 
 <Alert variant="destructive">
   <AlertCircleIcon /><AlertTitle>Heads up!</AlertTitle>
@@ -22,13 +22,15 @@ loss of use, savings or revenue, or the claims of third parties, whether or not 
 been advised of the possibility of such loss, however caused and on any theory of liability, arising out of or in 
 connection with the possession, use or performance of this website and its related services. 
 
-## Fair Use of Copyrighted Content
+---
 
-### Signatures
+### §1 Fair Use of Copyrighted Content
+
+#### §1.1 Signatures
 
 The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken, and Richard McDonald, co-founder of McDonald's—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
 
-### Textual Content
+#### §1.2 Textual Content
 
 The textual content of the rejection letter(s) is adapted from Northwestern University admissions material. Its inclusion is solely for [parody](https://www.law.cornell.edu/wex/parody) purposes.  
 
@@ -36,33 +38,62 @@ According to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/10
 
 > “The fair use of a copyrighted work, including such use by reproduction in copies or phonorecords or by any other means specified by that section, for purposes such as criticism, comment, news reporting, teaching (including multiple copies for classroom use), scholarship, or research, is not an infringement of copyright.”
 
+---
 
-### Elements of Our Logo
+### §2 Wild Chicken Univeristy Logo
 
-- The fish motif is taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms. Under Hungarian copyright law (1999./LXXVI. §1(4)), official coats of arms and flags are public domain, which is likewise recognized in the U.S. (§313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014).
+**TL;DR: 白話文: 內容農場 / 營銷號 請自重**
 
-- The daisy motif is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
+The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/). You may not use the material for commercial purposes. 
 
-- The chicken is from LadyofHats, Public domain, via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Chicken_silhouette_02.svg)
-
-### Wild Chicken Univeristy Logo
-
-The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/).
-
-本文件所示之合成徽標設計，僅供戲仿及示範性用途，並依據 **姓名標示-非商業性-相同方式分享 4.0** 國際授權條款 [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/) 授權使用與發佈：
+本文件所示之合成徽標設計，僅供戲仿及示範性用途，並依據 [姓名標示-非商業性-相同方式分享 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh-hant) 國際授權條款授權使用與發佈，不得將本素材進行商業目的之使用.
 
 ```
 © Mr-Sheep, licensed under [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/).
 ```
 
-Covered Assets (and their variants):
+#### §2.1: Covered Assets (and their variants):
 
 - [favicon.svg](https://wcu.edu.pl/images/favicon.svg)
 - [WCU_Alumni.svg](https://wcu.edu.pl/images/WCU_Alumni.svg)
 - [WCU_Alumni_White.svg](https://wcu.edu.pl/images/WCU_Alumni_White.svg)
 - [Wild_Chicken.svg](https://wcu.edu.pl/images/Wild_Chicken.svg)
 - [Wild_Chicken_White.svg](https://wcu.edu.pl/images/Wild_Chicken_White.svg)
+- [opengraph.png](https://wcu.edu.pl/images/opengraph.png)
 
-## Chicken Rights
+Repo hosting these assets can found on [GitHub](https://github.com/WildChickenUniversity/WildChickenAssets).
+
+
+#### §2.2 Elements of Our Logo
+
+##### §2.2.1 Fish Motif
+  
+Taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms.
+
+> This file depicts the official coat of arms or flag of a Hungarian municipality. According to 1.§ (4) of the Hungarian copyright law (1999./LXXVI.), 
+copyright protection does not cover "legal provisions, other means of state direction, court and other official resolutions, announcements and 
+documents issued by an authority or other official organ, as well as standards made obligatory by law and other similar regulations." Official 
+coat of arms and flags, being defined in such a regulation, are thus in the public domain in Hungary, and also in the US, according to § 313.6(C)(2) 
+Compendium of U.S. Copyright Office Practices, 3rd ed. 2014 (Compendium (Third)): "As a matter of longstanding public policy, the U.S. Copyright
+Office will not register a government edict that has been issued by any state, local, or territorial government, including legislative enactments,
+judicial decisions, administrative rulings, public ordinances, or similar types of official legal materials. Likewise, the Office will not register 
+a government edict issued by any foreign government or any translation prepared by a government employee acting within the course of his or her official duties." 
+
+
+##### §2.2.2 Daisy Motif
+
+Taken from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
+
+> This file depicts the coat of arms of a German Körperschaft des öffentlichen Rechts (corporation governed by public law). According to § 5 Abs. 1 of the German Copyright law, official works like coats of arms are in the public domain.
+
+##### §2.2.3 Chicken
+
+Taken from LadyofHats via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Chicken_silhouette_02.svg)
+
+> This work has been released into the public domain by its author, LadyofHats. This applies worldwide.
+
+---
+
+### §3 Chicken Rights
 
 **NO chickens were harmed during the creation of this website.** 
