--- a/app/review/mdx/disclaimer.mdx
+++ b/app/review/mdx/disclaimer.mdx
@@ -1,5 +1,9 @@
-Copyright of these contents are not claimde by us. 
+### NOTE
 
-All rights retained by the copyright holders. It will be removed if requested by contacting us.
+Copyright of these contents are **not** claimed by us. 
+
+All rights retained by the copyright holders. It will be removed if requested by creating a new issue on [GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=copyright.yaml).
+
+If you are not comfortable making public tickets, contact `copyright[at]wcu[dot]edu[dot]pl`. Note that we do not respond to these emails but your request will be processed within 21 days.
 
 Please note we are in no way affiliated with these comment, we cannot be held responsible for them.
