make landing page fancy again to 'hopefully' fix soft 404 failures

--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -7,7 +7,7 @@ import { AlertCircleIcon } from "lucide-react"
   <AlertCircleIcon /><AlertTitle>Heads up!</AlertTitle>
   <AlertDescription>
     WE ARE NOT AFFILIATED WITH ANY EDUCATIONAL INSTITUTION. 
-    FILES DOWNLOADED FROM THIS SITE DOESNOT HAVE ANY LEGAL EFFECT. NOR ARE WE RESPONSIBLE ANY FILES CREATED/DOWNLOADED FROM THIS SITE.
+    FILES DOWNLOADED FROM THIS SITE DOESNOT HAVE ANY LEGAL EFFECT. NOR ARE WE RESPONSIBLE FOR ANY FILES CREATED/DOWNLOADED FROM THIS SITE.
   </AlertDescription>
 </Alert>
 
