minor styling update

--- a/app/review/disclaimer.mdx
+++ b/app/review/disclaimer.mdx
@@ -1,3 +1,7 @@
+### Add Your Reviews?
+
+Interested in writing a review for Wild Chicken University? please send your review to `def-not-paid-review[at]wcu[dot]edu[dot]pl`. We will also periodically fetch reviews from social media platforms.
+
 ### NOTE
 
 Copyright of these contents are **not** claimed by us. 
