minor content update

--- a/app/admission/components/admissionText.mdx
+++ b/app/admission/components/admissionText.mdx
@@ -5,6 +5,7 @@ We do understand how bad you feel when you get a rejection letter from the unive
 
 Please watch our [campus tour video](https://youtu.be/dQw4w9WgXcQ)
 
+You may also want to check out our sister university: [Home University 家里蹲大学](https://hmu.ac.cn/)
 
 <Badge variant="default">NO APPLICATION FEE</Badge>
 <Badge variant="outline">NO PERSONAL STATEMENTS</Badge>
