page title, import sorting via prettier

--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -3,7 +3,11 @@ import { Button } from "@/components/ui/button"
 import { Badge } from "@/components/ui/badge"
 import Image from 'next/image'
 
-## Chicken CANT TYPE
+export const metadata = {
+  title: "About",
+};
+
+# Chicken CANT TYPE
 
 <Image
       src="/images/Chicken_February_2009-1.webp"
