--- a/app/pages/achievements/page.mdx
+++ b/app/pages/achievements/page.mdx
@@ -1,6 +1,10 @@
 import Image from 'next/image';
 
-## Academic Achievements
+export const metadata = {
+  title: "Achievements",
+};
+
+# Academic Achievements
 
 ### Published Papers
 
