--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -2,7 +2,11 @@ import { Button } from "@/components/ui/button"
 import { Badge } from "@/components/ui/badge";
 import Image from "next/image"
 
-## Once a Chicker, Forever a Chicker
+export const metadata = {
+  title: "Alumni",
+};
+
+# Once a Chicker, Forever a Chicker
 
 <Image
         src="/images/WCU_Alumni.svg"
