--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -1,7 +1,11 @@
 import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert"
 import { AlertCircleIcon } from "lucide-react"
 
-## Disclaimer (and other stuff)
+export const metadata = {
+  title: "Disclaimer",
+};
+
+# Disclaimer (and other stuff)
 
 <Alert variant="destructive">
   <AlertCircleIcon /><AlertTitle>Heads up!</AlertTitle>
