--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -5,7 +5,11 @@ import {
   AlertTitle,
 } from "@/components/ui/alert"
 
-## Privacy Policy
+export const metadata = {
+  title: "Privacy",
+};
+
+# Privacy Policy
 
 <Alert variant="destructive">
         <AlertCircleIcon />
