--- a/app/diploma/components/diplomaText.mdx
+++ b/app/diploma/components/diplomaText.mdx
@@ -1,6 +1,5 @@
 Our diploma is recognized by members of the [U4 Group of GitHub Research Universities](https://github.com/U4Group); 
 and probably all the McDonald's with a [working ice-cream machine](https://mcbroken.com/).
 
-A [diploma](https://en.wikipedia.org/wiki/Diploma) is a document awarded by an educational institution
-testifying the recipient has graduated by successfully completing their courses of studies. 
-Historically, it has also referred to a charter or official document of diplomacy. 
+Oh wow, what a coincidence — the diploma just happens to look a little bit familiar, like, say, the [University of Illinois](https://purdont.cc) and UCLA. 
+Totally normal, because great minds think alike, right?
