better naming and minor styling update

--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -63,6 +63,7 @@ The composite logo design presented herein is offered for parody and illustrativ
 - [WCU_Alumni_White.svg](https://wcu.edu.pl/images/WCU_Alumni_White.svg)
 - [Wild_Chicken.svg](https://wcu.edu.pl/images/Wild_Chicken.svg)
 - [Wild_Chicken_White.svg](https://wcu.edu.pl/images/Wild_Chicken_White.svg)
+- [seal.svg](https://wcu.edu.pl/images/seal.svg)
 - [opengraph.png](https://wcu.edu.pl/images/opengraph.png)
 
 Repo hosting these assets can found on [GitHub](https://github.com/WildChickenUniversity/WildChickenAssets).
