feature: allowing admission letter send

--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -15,7 +15,7 @@ export const metadata = {
         <AlertCircleIcon />
         <AlertTitle>Heads up!</AlertTitle>
         <AlertDescription>
-          The information below applies to all sections of this website, with the exception of the Diploma Email Sending service. 
+          The information below applies to all sections of this website, with the exception of the Diploma/Admission Letter Email Sending service. 
           For details regarding that service, please refer to its dedicated section §6 below.
         </AlertDescription>
       </Alert>
@@ -66,7 +66,7 @@ Thank you for choosing Wild Chicken University, where your data is as safe as an
 
 ### §6 Exception
 
-#### §6.1 Diploma Email Sending
+#### §6.1 Diploma/Admission Letter Email Sending
 
 The diploma email sending services is hosted on Cloudflare workers with its source code available on [github](https://github.com/WildChickenUniversity/DiplomaEmailCF). 
 
@@ -83,7 +83,6 @@ The information transmitted includes:
 
 - Your name (as entered in the form)
 - Your email address
-- Your major and degree
 - The Turnstile token
 
 #### §6.2 Discussion Section
