migrating to oxlint and oxfmt

--- a/app/admission/components/admissionText.mdx
+++ b/app/admission/components/admissionText.mdx
@@ -1,7 +1,7 @@
-import { Badge } from "@/components/ui/badge"
+import { Badge } from "@/components/ui/badge";
 
-We realize you've been anxiously awaiting your decision from Wild Chicken and want to let you know that your application status will never be "under review". 
-We do understand how bad you feel when you get a rejection letter from the university, that's why we won't say “We regret that we are unable to offer you admission.” 
+We realize you've been anxiously awaiting your decision from Wild Chicken and want to let you know that your application status will never be "under review".
+We do understand how bad you feel when you get a rejection letter from the university, that's why we won't say “We regret that we are unable to offer you admission.”
 
 Please watch our [campus tour video](https://youtu.be/dQw4w9WgXcQ)
 
@@ -10,4 +10,3 @@ You may also want to check out our sister university: [Home University 家里蹲
 <Badge variant="default">NO APPLICATION FEE</Badge>
 <Badge variant="outline">NO PERSONAL STATEMENTS</Badge>
 <Badge variant="destructive">SCREW FLYWIRE</Badge>
-
