--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -1,7 +1,7 @@
-import { Separator } from "@/components/ui/separator"
-import { Button } from "@/components/ui/button"
-import { Badge } from "@/components/ui/badge"
-import Image from 'next/image'
+import { Separator } from "@/components/ui/separator";
+import { Button } from "@/components/ui/button";
+import { Badge } from "@/components/ui/badge";
+import Image from "next/image";
 
 export const metadata = {
   title: "About",
@@ -10,15 +10,19 @@ export const metadata = {
 # Chicken CANT TYPE
 
 <Image
-      src="/images/Chicken_February_2009-1.webp"
-      width={562}
-      height={800}
-      alt="A running chicken"
-    />
+  src="/images/Chicken_February_2009-1.webp"
+  width={562}
+  height={800}
+  alt="A running chicken"
+/>
 
-<div className="text-xs">credit: Alvesgaspar, [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0), via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Chicken_February_2009-1.jpg)</div>
+<div className="text-xs">
+  credit: Alvesgaspar, [CC BY-SA
+  3.0](https://creativecommons.org/licenses/by-sa/3.0), via [Wikimedia
+  Commons](https://commons.wikimedia.org/wiki/File:Chicken_February_2009-1.jpg)
+</div>
 
-so we asked ChatGPT (probably 3.5) to write the following paragraph for us:   
+so we asked ChatGPT (probably 3.5) to write the following paragraph for us:
 (I mean, OpenAI should create a [ChickenGPT](https://cybernews.com/tech/catgpt-chatbot-that-meows-everything/) for us)
 
 Welcome to Wild Chicken University, the premier institution for all your poultry-related needs. Our world-renowned faculty of chicken experts will teach you everything you need to know about these feathery friends, from their clucking communication to their delectable taste (just kidding, we don't eat our students).
@@ -35,7 +39,11 @@ If you're tired of the traditional university application process, don't worry. 
 
 We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
-<Button ><a href="https://mascot.wcu.edu.pl" target="_blank">Mascot</a></Button>
+<Button>
+  <a href="https://mascot.wcu.edu.pl" target="_blank">
+    Mascot
+  </a>
+</Button>
 
 Note: your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
 
@@ -49,23 +57,22 @@ Please refer to the [disclaimer](/pages/disclaimer) page.
 
 Please refer to the [privacy](/pages/privacy) page.
 
-
 ---
 
 ### Enough BS, WTF is wcu?
 
-Wild Chicken University (also known as a diploma mill or degree mill when translated into Chinese "野雞大學" or "野鸡大学") 
+Wild Chicken University (also known as a diploma mill or degree mill when translated into Chinese "野雞大學" or "野鸡大学")
 is an organization that awards academic degrees and diplomas with substandard or no academic study and without recognition
-by official educational accrediting bodies. 
+by official educational accrediting bodies.
 
-The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit. 
-These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation 
-by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity. 
+The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit.
+These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation
+by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity.
 
-While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn: 
+While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn:
 
-- A "degree mill" issues "real" diplomas from non regionally accredited "universities", which may be legal in some states but are generally illegitimate universities. 
-- A "diploma mill" issues counterfeit diplomas which bear the names of legitimate universities. 
+- A "degree mill" issues "real" diplomas from non regionally accredited "universities", which may be legal in some states but are generally illegitimate universities.
+- A "diploma mill" issues counterfeit diplomas which bear the names of legitimate universities.
 
 Partially copied from [Wild Chicken University on Facebook (or should we call it Meta?)](https://www.facebook.com/Wild-Chicken-University-170013173058220/about)
 
@@ -73,19 +80,23 @@ Partially copied from [Wild Chicken University on Facebook (or should we call it
 
 ### Donation
 
-We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways, XMR: 
+We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways, XMR:
 
 `82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap`
 
-點此獲取我們的支付寶二維碼: 
+點此獲取我們的支付寶二維碼:
 
-<Button ><a href="https://www.bilibili.com/video/BV1GJ411x7h7/" target="_blank">這一定是二維碼</a></Button>
+<Button>
+  <a href="https://www.bilibili.com/video/BV1GJ411x7h7/" target="_blank">
+    這一定是二維碼
+  </a>
+</Button>
 
 ---
 
 ### 寫在最後
 
-我很意外你有看到這裏 :) 
+我很意外你有看到這裏 :)
 
 [原始版本](https://web.archive.org/web/20220102100912/https://wcu.edu.pl/)的 Wild Chicken University「官網」是修改自 Northwestern University 的錄取結果頁面，
 當年被拒之後覺得很好玩就做了這個網站。
@@ -98,4 +109,4 @@ We understand no one actually read all these nonsense, but we've decided to leav
 
 Best Wishes
 
-Made with 🌽 
+Made with 🌽
