--- a/app/pages/achievements/page.mdx
+++ b/app/pages/achievements/page.mdx
@@ -1,4 +1,4 @@
-import Image from 'next/image';
+import Image from "next/image";
 
 export const metadata = {
   title: "Achievements",
@@ -8,7 +8,7 @@ export const metadata = {
 
 ### Published Papers
 
-Read this [masterpiece](/chicken.pdf) written on Jan 18<sup>th</sup>, 2007: 
+Read this [masterpiece](/chicken.pdf) written on Jan 18<sup>th</sup>, 2007:
 
 ```
    @article{Chicken,
@@ -38,10 +38,14 @@ Another good paper that you should read is ["Get me off Your Fucking Mailing Lis
 One of our Chicklumni created this [game](https://cianokias.itch.io/wild-chicken-university):
 
 <Image
-      src="/images/WCU_Game_Banner.webp"
-      width={500}
-      height={500}
-      alt="WCU Game banner"
-    />
+  src="/images/WCU_Game_Banner.webp"
+  width={500}
+  height={500}
+  alt="WCU Game banner"
+/>
 
-<iframe src="https://itch.io/embed/1361579" width="552" height="167"><a href="https://cianokias.itch.io/wild-chicken-university" target="_blank">野鸡大学 by Ziduan</a></iframe>
+<iframe src="https://itch.io/embed/1361579" width="552" height="167">
+  <a href="https://cianokias.itch.io/wild-chicken-university" target="_blank">
+    野鸡大学 by Ziduan
+  </a>
+</iframe>
