--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -1,6 +1,6 @@
-import { Button } from "@/components/ui/button"
+import { Button } from "@/components/ui/button";
 import { Badge } from "@/components/ui/badge";
-import Image from "next/image"
+import Image from "next/image";
 
 export const metadata = {
   title: "Alumni",
@@ -9,23 +9,24 @@ export const metadata = {
 # Once a Chicker, Forever a Chicker
 
 <Image
-        src="/images/WCU_Alumni.svg"
-        alt="WCU Alumni"
-        width={500}
-        height={500}
-        priority
-        className="object-contain dark:[content:url('/images/WCU_Alumni_White.svg')]"
-      />
+  src="/images/WCU_Alumni.svg"
+  alt="WCU Alumni"
+  width={500}
+  height={500}
+  priority
+  className="object-contain dark:[content:url('/images/WCU_Alumni_White.svg')]"
+/>
 
 ### GitHub
 
-If you would like to show case Wild Chicken University on your GitHub profile page,  
+If you would like to show case Wild Chicken University on your GitHub profile page,
 using the **"Alumni Application"** template in our GitHub repo to request an invite to the organization.
 
+<Button variant="default">
+  [GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.yaml)
+</Button>
 
-<Button variant="default">[GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.yaml)</Button>
-
-If your application is accepted, you will receive an offer email with an invitation link to the Alumni team. 
+If your application is accepted, you will receive an offer email with an invitation link to the Alumni team.
 Alternatively, you can try [this link](https://github.com/orgs/WildChickenUniversity/invitation?via_email=1).
 If neither worked for you, plesae contact us directly.
 
@@ -43,7 +44,7 @@ We are also a proud member of [U4 Group](https://github.com/U4Group) of GitHub R
 
 ### Social Media
 
-At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile. 
+At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile.
 
 We also have a linkedin page if you wish to follow: <Badge asChild variant="default"><a href=" http://linkedin.com/company/wild-chicken-university" target="_blank">@wild-chicken-university</a></Badge>
 
