--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -1,5 +1,5 @@
-import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert"
-import { AlertCircleIcon } from "lucide-react"
+import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert";
+import { AlertCircleIcon } from "lucide-react";
 
 export const metadata = {
   title: "Disclaimer",
@@ -8,23 +8,25 @@ export const metadata = {
 # Disclaimer (and other stuff)
 
 <Alert variant="destructive">
-  <AlertCircleIcon /><AlertTitle>Heads up!</AlertTitle>
+  <AlertCircleIcon />
+  <AlertTitle>Heads up!</AlertTitle>
   <AlertDescription>
-    WE ARE NOT AFFILIATED WITH ANY EDUCATIONAL INSTITUTION. 
-    FILES DOWNLOADED FROM THIS SITE DOESNOT HAVE ANY LEGAL EFFECT. NOR ARE WE RESPONSIBLE FOR ANY FILES CREATED/DOWNLOADED FROM THIS SITE.
+    WE ARE NOT AFFILIATED WITH ANY EDUCATIONAL INSTITUTION. FILES DOWNLOADED
+    FROM THIS SITE DOESNOT HAVE ANY LEGAL EFFECT. NOR ARE WE RESPONSIBLE FOR ANY
+    FILES CREATED/DOWNLOADED FROM THIS SITE.
   </AlertDescription>
 </Alert>
 
-The project is licensed under [GPLv3](https://www.gnu.org/licenses/quick-guide-gplv3.en.html), a copyleft licnese for software and other kinds of works. 
+The project is licensed under [GPLv3](https://www.gnu.org/licenses/quick-guide-gplv3.en.html), a copyleft licnese for software and other kinds of works.
 Fonts, pictures, and other assets may or may not have their own license.
 
-The material embodied in this website and its related services is provided to you "as-is" and without warranty of any kind, 
-express, implied or otherwise, including without limitation, any warranty of fitness for a particular purpose. 
-In no event shall the Wild Chicken University be liable to you or anyone else for any direct, special, incidental, 
+The material embodied in this website and its related services is provided to you "as-is" and without warranty of any kind,
+express, implied or otherwise, including without limitation, any warranty of fitness for a particular purpose.
+In no event shall the Wild Chicken University be liable to you or anyone else for any direct, special, incidental,
 indirect or consequential damages of any kind, or any damages whatsoever, including without limitation, loss of profit,
-loss of use, savings or revenue, or the claims of third parties, whether or not the Wild Chicken University has 
-been advised of the possibility of such loss, however caused and on any theory of liability, arising out of or in 
-connection with the possession, use or performance of this website and its related services. 
+loss of use, savings or revenue, or the claims of third parties, whether or not the Wild Chicken University has
+been advised of the possibility of such loss, however caused and on any theory of liability, arising out of or in
+connection with the possession, use or performance of this website and its related services.
 
 ---
 
@@ -36,7 +38,7 @@ The accompanying signature—attributed to Colonel Harland David Sanders, founde
 
 #### §1.2 Textual Content
 
-The textual content of the rejection letter(s) is adapted from Northwestern University admissions material. Its inclusion is solely for [parody](https://www.law.cornell.edu/wex/parody) purposes.  
+The textual content of the rejection letter(s) is adapted from Northwestern University admissions material. Its inclusion is solely for [parody](https://www.law.cornell.edu/wex/parody) purposes.
 
 According to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/107):
 
@@ -48,7 +50,7 @@ According to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/10
 
 **TL;DR: 白話文: 內容農場 / 營銷號 請自重**
 
-The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/). You may not use the material for commercial purposes. 
+The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/). You may not use the material for commercial purposes.
 
 本文件所示之合成徽標設計，僅供戲仿及示範性用途，並依據 [姓名標示-非商業性-相同方式分享 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh-hant) 國際授權條款授權使用與發佈，不得將本素材進行商業目的之使用.
 
@@ -68,26 +70,24 @@ The composite logo design presented herein is offered for parody and illustrativ
 
 Repo hosting these assets can found on [GitHub](https://github.com/WildChickenUniversity/WildChickenAssets).
 
-
 #### §2.2 Elements of Our Logo
 
 ##### §2.2.1 Fish Motif
-  
+
 Taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms.
 
-> This file depicts the official coat of arms or flag of a Hungarian municipality. According to 1.§ (4) of the Hungarian copyright law (1999./LXXVI.), 
-copyright protection does not cover "legal provisions, other means of state direction, court and other official resolutions, announcements and 
-documents issued by an authority or other official organ, as well as standards made obligatory by law and other similar regulations." Official 
-coat of arms and flags, being defined in such a regulation, are thus in the public domain in Hungary, and also in the US, according to § 313.6(C)(2) 
-Compendium of U.S. Copyright Office Practices, 3rd ed. 2014 (Compendium (Third)): "As a matter of longstanding public policy, the U.S. Copyright
-Office will not register a government edict that has been issued by any state, local, or territorial government, including legislative enactments,
-judicial decisions, administrative rulings, public ordinances, or similar types of official legal materials. Likewise, the Office will not register 
-a government edict issued by any foreign government or any translation prepared by a government employee acting within the course of his or her official duties." 
-
+> This file depicts the official coat of arms or flag of a Hungarian municipality. According to 1.§ (4) of the Hungarian copyright law (1999./LXXVI.),
+> copyright protection does not cover "legal provisions, other means of state direction, court and other official resolutions, announcements and
+> documents issued by an authority or other official organ, as well as standards made obligatory by law and other similar regulations." Official
+> coat of arms and flags, being defined in such a regulation, are thus in the public domain in Hungary, and also in the US, according to § 313.6(C)(2)
+> Compendium of U.S. Copyright Office Practices, 3rd ed. 2014 (Compendium (Third)): "As a matter of longstanding public policy, the U.S. Copyright
+> Office will not register a government edict that has been issued by any state, local, or territorial government, including legislative enactments,
+> judicial decisions, administrative rulings, public ordinances, or similar types of official legal materials. Likewise, the Office will not register
+> a government edict issued by any foreign government or any translation prepared by a government employee acting within the course of his or her official duties."
 
 ##### §2.2.2 Daisy Motif
 
-Taken from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
+Taken from DEU [Marienfeld (Westf.)](<https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg>) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
 
 > This file depicts the coat of arms of a German Körperschaft des öffentlichen Rechts (corporation governed by public law). According to § 5 Abs. 1 of the German Copyright law, official works like coats of arms are in the public domain.
 
@@ -101,4 +101,4 @@ Taken from LadyofHats via [Wikimedia Commons](https://commons.wikimedia.org/wiki
 
 ### §3 Chicken Rights
 
-**NO chickens were harmed during the creation of this website.** 
+**NO chickens were harmed during the creation of this website.**
