--- a/components/review/mdx/1.mdx
+++ b/components/review/mdx/1.mdx
@@ -1,6 +1,6 @@
-import Image from 'next/image'
+import Image from "next/image";
 
-### 关于我考上“野鸡大学“还收到祝福这件事 
+### 关于我考上“野鸡大学“还收到祝福这件事
 
 source: [douban](https://www.douban.com/group/topic/258234945)
 
@@ -13,12 +13,11 @@ source: [douban](https://www.douban.com/group/topic/258234945)
 然后……同是留学生的↓
 
 <Image
-      src="/images/review/review1.webp"
-      width={400}
-      height={400}
-      alt="chat history"
-    />
-
+  src="/images/review/review1.webp"
+  width={400}
+  height={400}
+  alt="chat history"
+/>
 
 听着她认真的话语，我也自豪了起来（不
 
