--- a/components/review/mdx/3.mdx
+++ b/components/review/mdx/3.mdx
@@ -1,9 +1,8 @@
-import Image from 'next/image'
+import Image from "next/image";
 
 ### 前年毕业了，但依旧怀恋在破校的日子
 
 source: [ZhiHu](https://www.zhihu.com/question/510542225)
-
 
 小破校人不多，但是每个人都很nice.
 
@@ -11,19 +10,18 @@ source: [ZhiHu](https://www.zhihu.com/question/510542225)
 
 这是日常使用的胶水
 
-
 <Image
-      src="/images/review/reivew3_glue.webp"
-      width={400}
-      height={400}
-      alt="日常使用的胶水"
-    />
+  src="/images/review/reivew3_glue.webp"
+  width={400}
+  height={400}
+  alt="日常使用的胶水"
+/>
 
 在学习期间我跟随我的教授，在水中按照5：5加入乳胶从而创新出了一门新型可缓解胶水。从而达到胶水粘不了胶水的胶水的作用。
 
 总之毕业了之后，虽然他对我从事的用胶水粘非胶水物质的工作不是特别喜欢，但是教授依然与我保持着联系。
 
-_____________________________________
+---
 
 分割线↑
 
