--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -1,9 +1,5 @@
-import { AlertCircleIcon } from "lucide-react"
-import {
-  Alert,
-  AlertDescription,
-  AlertTitle,
-} from "@/components/ui/alert"
+import { AlertCircleIcon } from "lucide-react";
+import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert";
 
 export const metadata = {
   title: "Privacy",
@@ -12,13 +8,14 @@ export const metadata = {
 # Privacy Policy
 
 <Alert variant="destructive">
-        <AlertCircleIcon />
-        <AlertTitle>Heads up!</AlertTitle>
-        <AlertDescription>
-          The information below applies to all sections of this website, with the exception of the Diploma/Admission Letter Email Sending service. 
-          For details regarding that service, please refer to its dedicated section §6 below.
-        </AlertDescription>
-      </Alert>
+  <AlertCircleIcon />
+  <AlertTitle>Heads up!</AlertTitle>
+  <AlertDescription>
+    The information below applies to all sections of this website, with the
+    exception of the Diploma/Admission Letter Email Sending service. For details
+    regarding that service, please refer to its dedicated section §6 below.
+  </AlertDescription>
+</Alert>
 
 **TL,DR: Wild Chicken University is a FRONT-END ONLY project**
 
@@ -30,8 +27,8 @@ We cannot see any of your information. We CANNOT upload any of your data to our 
 
 Your data stays with you. We collect absolutely nothing. We're like that nosy neighbor who just moved in but is too shy to ask you anything.
 
-We should probably, however, try steal all your personal data, unlike all the major techs, and sell them to some third parties. 
-Luckily, our storage capabilities are as impressive as a chicken trying to fly.  
+We should probably, however, try steal all your personal data, unlike all the major techs, and sell them to some third parties.
+Luckily, our storage capabilities are as impressive as a chicken trying to fly.
 
 Pleaes, however, note that the commenting system we are using (utteranc.es) has it's own privacy policy. Pleaes read it carefully [here](https://github.com/utterance/utterances/blob/master/PRIVACY-POLICY.md) should you have any question.
 
@@ -39,7 +36,7 @@ Pleaes, however, note that the commenting system we are using (utteranc.es) has 
 
 ### §2 How We Use Your Information
 
-We don't. We can't. We won't. Even if we had servers, our non-existent IT department, like many other big universities, 
+We don't. We can't. We won't. Even if we had servers, our non-existent IT department, like many other big universities,
 wouldn't know what to do with your data. However, we are planning on training our chicken to type. We share your data with no one. Not because we're super ethical (though we absolutely are), but because there's nothing for us to share.
 
 ---
@@ -68,7 +65,7 @@ Thank you for choosing Wild Chicken University, where your data is as safe as an
 
 #### §6.1 Diploma/Admission Letter Email Sending
 
-The diploma email sending services is hosted on Cloudflare workers with its source code available on [github](https://github.com/WildChickenUniversity/DiplomaEmailCF). 
+The diploma email sending services is hosted on Cloudflare workers with its source code available on [github](https://github.com/WildChickenUniversity/DiplomaEmailCF).
 
 To prevent abusive use of the service, we added [Cloudflare Turnstile](https://www.cloudflare.com/application-services/products/turnstile/) (aka a better captcha) before you can submit the form.
 
@@ -87,4 +84,4 @@ The information transmitted includes:
 
 #### §6.2 Discussion Section
 
-The discussion section is powered by [giscus](https://giscus.app/). You will need an GitHub account to use, which is subjected to [GitHub Privacy Policy](https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement) 
+The discussion section is powered by [giscus](https://giscus.app/). You will need an GitHub account to use, which is subjected to [GitHub Privacy Policy](https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement)
